# shuthost

./: .containerignore  .dockerignore  .gitattributes  .gitignore  .tokeignore  Cargo.toml  Containerfile  Justfile  README.md  README_agent_install.md  README_architecture.md  README_client_install.md  about.toml  agents.md  build.rs  clippy.toml  deny.toml  example_controller_config.toml  index.html  lcov.info  manifest.json  shuthost.db  shuthost_direct_control.ps1  styles.css
agent/: Cargo.toml
agent/src/: config.rs  handler.rs  install.rs  main.rs  server.rs
agent/src/install/: com.github.9smtm6.shutdown_agent.plist.xml  com.github_9smtm6.shuthost_agent.plist.xml  mod.rs  rc.shuthost_agent.sh  shutdown_agent.service.ini
common/: Cargo.toml
common/src/: hmac.rs  lib.rs  map_to_str.rs  protocol.rs  secrets.rs  service_install.rs  signing.rs  validation.rs
common/src/service_install/: macos.rs  mod.rs  openrc.rs  self_extracting.rs  serviceless.rs  systemd.rs  sysvinit.rs
controller/: Cargo.toml  index.html
controller/src/: autoinstall.sh  config.rs  http.rs  main.rs  wol.rs
controller/src/install/: com.github_9smtm6.shuthost_controller.plist.xml  mod.rs  shuthost_controller.service.ini
controller/src/routes/: api.rs  download.rs
coordinator/: Cargo.toml  Justfile  build.rs  index.html  manifest.json
coordinator/.sqlx/: query-00128acc72d507d33bbfc22e0d56dc4831bf8da3fcd74a6f9ae3ca328ae9c09f.json  query-069513734ff445f0a7fef603a2461b134ba24fcf1526ca7574fa53c3137adfba.json  query-06eb34679c62d2a698d53680ce02e97e118b5c86843018a786cd2cb928f2867c.json  query-0a3c4403d6e89548764cb9ecbc0b475553ce75e3b5e1c217b6586d07dfbe25e0.json  query-0d2d4e5edec71cd8d6c6bac64c5c9b794a8be7784213760f9fc4052fe5e14966.json  query-111f13e3689196d64b84e5d9d9af1c6128583f9bf2de849e299ea02792c60e77.json  query-112d7838d0435e019ec2ab852932e1d2a511f2bfd225a192132c6878fc321d4d.json  query-266d9b24c530f808cda03b11947125cc815f743b6de8614ee031e8313ed78b19.json  query-305eb96c62cf19939b0038bc554873465e3622f08916a0799cc033de46e42d47.json  query-3438fce78f49b4dd29f3b7806ee0a0ebd2d681a481aee6595b7f061b50cd5cc0.json  query-385044074c463959aebcb35204795268fd8f0a1cad6d56f298f9c84596a6de4b.json  query-45bcae793758fe16d75c3109fd64630c59734a1cec09b5988598c40927fee9c4.json  query-4621d86c37b28724314bfb17080b30fe07400c53762604aac6a57d399f22ecad.json  query-516d93fe84dd5bc6b5db5649516f21f0f0f3c5a93378e8cd426a25fdb1e63fdb.json  query-5c185071d6949d51d040598fe5f70ac5cb55daa7562ca6443a6825c44b15e691.json  query-5d4f8c8689f5fa16cc18514fb6cdd36cbc06dc5168d0ea9a67a3a415ef1afcd1.json  query-69c38ad57fde89809d9ac19a9e4807c1fa02d4ab162af68ded1ef2a286ef63eb.json  query-72bd20ce11ffe3ae2ff412d8bc9193f7ed6023d2dc9619b622f1c9f17c49046e.json  query-7c7f2ea570bc19f7ee9cb8983af02f4d5e74348be730b10558e33e3913702684.json  query-8a6e66cca5c90a6ba6644ff5c643e886780488d17811a33760bbd9ceec4efbab.json  query-a5e102bac6561dedaa87358db9a3274001576e578796a49bb4c471b78d036e14.json  query-b82148905745c1ad4cd96d47b2533365d9c5d4c7254264aff3c91fc1b755ca93.json  query-bbb99f2bef3124216cce3d3d5bb57191b81a2811c8aa4f3e080ee337de3b5f88.json  query-cb41c7a678390cba09b01fa029032946bb0e62553cb7a8e8422ff5ceee00a55e.json  query-d22e7b7d274390a71edd780231549eb67d5fafab0aa08051f377391b86eeb201.json  query-dafef1fb8af4283c6d5decca40dcfdbf58ef59660f5e9ee1eb711947f1cb9219.json  query-dc9cef9811ebb4ef29aa72fc497d25305860da787c9ea0d71e9e536706f816b8.json  query-e4940cc8ec3b17e0afb9d755f89aa965492409bd220b22d50232203ca59d3595.json  query-e615b3a7513125e9bc5608abd11cd724d1963ab1f95c75083e27ec0b60eeb18a.json  query-f02059f363d21878685b0569f89e5123062804bb18b39ec3a7de04ef9758953d.json  query-f260933abf3169709ca9bce45a6d5b0b9a7ac453b906b88c58377aed58816b8b.json  query-f41cab1b27e5cde02c95655bf6e105591712bedc9ef066907c79d4fe235003d2.json  query-f565f704cb4c5a81e3cc198a857317d76a5517db3585ceee753f5d75a99cc2d8.json
coordinator/assets/: .gitignore  agent_install_requirements_gotchas.html  agent_install_requirements_gotchas.md  app.js  app.ts  architecture.dot  architecture.html  architecture.md  architecture_simplified.dot  client_install_requirements_gotchas.html  client_install_requirements_gotchas.md  index.tmpl.html  login.tmpl.html  manifest.json  package-lock.json  styles.css  tsconfig.json
coordinator/assets/partials/: architecture.tmpl.html  demo_disclaimer.tmpl.html  external_auth_exceptions.tmpl.html  footer.tmpl.html  header.tmpl.html  header_tabs.tmpl.html  html_head.tmlp.html  login_error_oidc.tmpl.html  login_error_session_expired.tmpl.html  login_error_unknown.tmpl.html  logout_form.tmpl.html  maybe_external_auth_config.tmpl.html  oidc_login.tmpl.html  token_login.tmpl.html
coordinator/migrations/: 20251016222605_initial_setup_persist_leases.sql  20251020082258_kv_storage.sql  20251117161711_push_subscriptions.sql  20251130191056_add_client_stats.sql  20260228193509_add_host_ip_overrides.sql  20260407083522_add_push_subscriptions.sql  20260408173322_add_host_last_online.sql  20260408180004_replace_push_subscription_host_online_with_unscheduled.sql  20260411000000_add_push_subscriptions.sql  20260411000001_add_host_stats.sql  20260411000002_add_init_system_os_to_host_stats.sql  20260411000003_add_push_subscription_host_operation_failed.sql  20260426181041_add_push_subscription_host_online_for.sql  20260427093943_add_more_host_stats.sql
coordinator/src/: assets.rs  cli.rs  config.rs  db.rs  demo.rs  http.rs  lib.rs  main.rs  run.rs  state.rs  websocket.rs  wol.rs
coordinator/src/app/: config_watcher.rs  db.rs  hooks.rs  host_actor.rs  host_control.rs  mod.rs  notifications.rs  runtime.rs  shared_watch_store.rs  startup.rs  state.rs  update_check.rs
coordinator/src/auth/: cookies.rs  middleware.rs  mod.rs  oidc.rs  routes.rs  token.rs
coordinator/src/config/: loader.rs  mod.rs  types.rs  watcher.rs
host_agent/: Cargo.toml  build.rs
host_agent/src/: commands.rs  handler.rs  lib.rs  main.rs  registration.rs  script_generator.rs  server.rs  validation.rs
node_agent/: Cargo.toml
node_agent/src/: handler.rs  main.rs  server.rs
(+494 files in other folders)
