[workspace]
members = ["host_agent", "coordinator", "common"]
default-members = ["coordinator", "host_agent"]
resolver = "3"

[workspace.package]
version = "1.2.4"
edition = "2024"
authors = ["Samuel Maier"]
description = "A neat helper that manages the standby state of unix hosts with Wake-On-Lan configured, with Web-GUI."
repository = "https://github.com/9SMTM6/shuthost"
license = "MIT OR Apache-2.0"
readme = true
keywords = ["wol", "wake-on-lan", "pwa", "progressive-web-app", "oidc", "openid-connect", "oidc-client", "homelab", "power-management", "energy-consumption", "green-computing", "energy-management", "machine-to-machine"]
# this ain't no crate
categories = []

[package]
name = "shuthost"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[workspace.dependencies]
hmac = "0.12.1"
sha2 = "0.10.8"
rand = "0.9.x"
hex = "0.4.3"
reqwest = { version = "0.12", default-features = false }
clap = { version = "4.5.37", features = ["derive"] }
global_service_install = {path = "./global_service_install"}
shuthost_common = {path = "./common"}
tokio = { version = "1.44.2", features = ["full"] }

[workspace.lints.rust]
unsafe-op-in-unsafe-fn = "warn"
let_underscore_drop = "deny"
rust_2024_compatibility = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable, rust_analyzer)'] }
edition_2024_expr_fragment_specifier = "allow"
# unstable
# must_not_suspend = "deny"

[workspace.lints.clippy]
# AFAICT this contains groups correctness, suspicious, complexity, perf, style, and pendantic. 
# But not restriction, cargo, nursery, and deprecated.
all = { level = "warn", priority = -1 }
# nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
allow_attributes_without_reason = "warn"
branches_sharing_code = "warn"
# this seems to have false positives
cargo_common_metadata = "allow"
checked_conversions = "warn"
cognitive_complexity = "warn"
dbg_macro = "warn"
# "warn_on_ci"
expl_impl_clone_on_copy = "deny"
float_cmp = "warn"
fn_params_excessive_bools = "warn"
indexing_slicing = "warn"
manual_ok_or = "warn"
missing_const_for_fn = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
module_name_repetitions = "warn"
# handled with cargo-deny
multiple_crate_versions = "allow"
needless_borrowed_reference = "allow"
needless_pass_by_value = "warn"
no_effect_underscore_binding = "warn"
pattern_type_mismatch = "warn"
rc_buffer = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
separated_literal_suffix = "warn"
shadow_unrelated = "warn"
struct_excessive_bools = "warn"
# todo = "warn"
# "warn_on_ci"
undocumented_unsafe_blocks = "warn"
unnested_or_patterns = "warn"
unreadable_literal = "warn"
# unwrap_used = "warn"
# "warn_on_ci"
used_underscore_binding = "warn"

[dev-dependencies]
tokio.workspace = true
reqwest = { workspace = true, features = ["json", "blocking", "rustls-tls"] }
serde_json = "1.0"
