[workspace]
default-members = ["coordinator", "host_agent"]
resolver = "3"

[workspace.package]
version = "1.5.10"
edition = "2024"
authors = ["Samuel Maier"]
description = "A neat helper that manages the standby state of unix and windows hosts with Wake-On-Lan (WOL) configured, with Web-GUI."
repository = "https://github.com/9SMTM6/shuthost"
license = "GPL-2.0-only"
readme = true
keywords = [
    "energy-consumption",
    "energy-management",
    "green-computing",
    "homelab",
    "machine-to-machine",
    "oidc-client",
    "oidc",
    "openid-connect",
    "power-management",
    "progressive-web-app",
    "pwa",
    "sleep-on-lan",
    "wake-on-lan",
    "wol",
]
# this ain't no crate
categories = []

[package]
name = "shuthost"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
# these implicitly exist because of the [coordinator package](./coordinator/Cargo.toml)
# "coordinator/include_macos_agents" = []
# "coordinator/include_linux_agents" = []

[dependencies]
clap.workspace = true
eyre.workspace = true
shuthost_coordinator.workspace = true
shuthost_host_agent.workspace = true
tokio.workspace = true

# binary targets, these exist solely so that binaries are available in integration tests
[[bin]]
name = "coordinator"
path = "coordinator/src/main.rs"

[[bin]]
name = "host_agent"
path = "host_agent/src/main.rs"

[dev-dependencies]
futures-util = "0.3"
futures.workspace = true
reqwest = { workspace = true, features = ["json", "blocking"] }
secrecy.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shuthost_common = { workspace = true }
tokio-tungstenite = "*"
tokio.workspace = true

[lints]
workspace = true

[workspace.dependencies]
base64 = "0.22.1"
clap = { version = "4.5.37", features = ["derive"] }
eyre = "0.6.12"
futures = "0.3.31"
hex = "0.4.3"
hmac = "0.12.1"
nix = { version = "0.31", features = ["user", "fs"] }
rand = "0.9.x"
regex = "1.11.1"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
] }
secrecy = "0.10"
sha2 = "0.10.8"
shuthost_common = { path = "./common" }
shuthost_coordinator = { path = "./coordinator" }
shuthost_host_agent = { path = "./host_agent" }
tokio = { version = "1.44.2", features = ["full"] }
toml = "0.9.x"

[workspace.lints.rust]
edition_2024_expr_fragment_specifier = "allow"
let_underscore_drop = "deny"
rust_2018_idioms = { level = "warn", priority = -1 }
rust_2024_compatibility = { level = "warn", priority = -1 }
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(tokio_unstable, rust_analyzer, coverage, coverage_nightly)',
] }
unsafe-op-in-unsafe-fn = "warn"
unused_extern_crates = "allow"
# Note: We import from core and alloc explicitly to clarify where names come from, which helps understand what they might do
# Always importing the crates is the most elegant way to avoid autofix not properly working
# unstable
# must_not_suspend = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# restriction = { level = "warn", priority = -1 }
# nursery = { level = "warn", priority = -1 }
absolute_paths = "warn"
alloc_instead_of_core = "warn"
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
as_underscore = "warn"
assertions_on_result_states = "warn"
branches_sharing_code = "warn"
cargo_common_metadata = "allow"           # I'm not publishing these crates on crates.io
checked_conversions = "warn"
cognitive_complexity = "warn"
dbg_macro = "warn"
derive_partial_eq_without_eq = "warn"
error_impl_error = "warn"
expl_impl_clone_on_copy = "deny"
float_cmp = "warn"
fn_params_excessive_bools = "warn"
indexing_slicing = "warn"
items_after_statements = "allow"          # I often want to define inline consts in functions, and this flags them.
iter_on_single_items = "warn"
manual_ok_or = "warn"
map_with_unused_argument_over_ranges = "warn"
missing_assert_message = "warn"
missing_asserts_for_indexing = "warn"
missing_const_for_fn = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
module_name_repetitions = "warn"
multiple_crate_versions = "allow"         # handled with cargo-deny
multiple_unsafe_ops_per_block = "warn"
needless_borrowed_reference = "allow"
needless_pass_by_value = "warn"
needless_raw_strings = "warn"
no_effect_underscore_binding = "warn"
pathbuf_init_then_push = "warn"
pattern_type_mismatch = "warn"
pointer_format = "warn"
precedence_bits = "warn"
pub_without_shorthand = "warn"
rc_buffer = "warn"
redundant_else = "warn"
redundant_test_prefix = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
return_and_then = "warn"
semicolon_if_nothing_returned = "warn"
semicolon_inside_block = "warn"
separated_literal_suffix = "warn"
shadow_unrelated = "warn"
single_char_lifetime_names = "warn"
single_match_else = "allow"               # Honestly I often prefer the readability of match with an else branch.
single_option_map = "warn"
std_instead_of_alloc = "warn"
std_instead_of_core = "warn"
struct_excessive_bools = "warn"
tests_outside_test_module = "warn"
todo = "warn"
too_long_first_doc_paragraph = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_debug_formatting = "allow"    # The main reason I don't care about this warning is that doing this with debug lets me define the variable name inline.
unnested_or_patterns = "warn"
unreadable_literal = "warn"
unused_result_ok = "warn"
unused_trait_names = "warn"
unwrap_used = "warn"
used_underscore_binding = "warn"
wildcard_dependencies = "allow"  # It should be fine with how I use them...
# arbitrary_source_item_ordering = "warn"
