[package]
name = "agent"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
documentation.workspace = true

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
hex.workspace = true
hmac.workspace = true
rand = "0.9.1"
serde.workspace = true
sha2.workspace = true
toml.workspace = true
