[package]
name = "shuthost_agent"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
documentation.workspace = true

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
hex.workspace = true
hmac.workspace = true
rand = "0.9.1"
sha2.workspace = true
