[package]
name = "shuthost_common"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
rand.workspace = true
libc = "0.2.x"

[lints]
workspace = true
