[package]
name = "shuthost_common"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
hex.workspace = true
hmac.workspace = true
nix.workspace = true
rand.workspace = true
sha2.workspace = true

[lints]
workspace = true
