[package]
name = "shuthost_common"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
hex.workspace = true
hmac.workspace = true
miniserde = { workspace = true, optional = true }
nix.workspace = true
secrecy.workspace = true
serde = { workspace = true, optional = true }
sha2.workspace = true

[features]
# Feature for agent builds (miniserde only)
agent = ["miniserde"]
# Feature for coordinator builds (serde only)
coordinator = ["serde"]

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
