[package]
name = "controller"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
documentation.workspace = true

[dependencies]
hmac.workspace = true
serde.workspace = true
sha2.workspace = true
hex.workspace = true
tiny_http = "0.12.0"
toml.workspace = true
serde_json = "1.0.140"
regex = "1.11.1"
