[package]
name = "controller"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
documentation.workspace = true

[dependencies]
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
toml = "0.8.20"
serde = { version = "1.0.219", features = ["derive"] }
tiny_http = "0.12.0"
serde_json = "1.0.140"
regex = "1.11.1"
