[package]
name = "shuthost_coordinator"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

# If you add features, add them as features to the test in CI and Justfile.
# We can't use --all-features in there, as that requires all agents to have been built.
[features]
default = ["compression-br", "compression-zstd"]
compression-br = ["tower-http/compression-br", "reqwest/brotli"]
compression-deflate = ["tower-http/compression-deflate", "reqwest/deflate"]
compression-gzip = ["tower-http/compression-gzip", "reqwest/gzip"]
compression-zstd = ["tower-http/compression-zstd", "reqwest/zstd"]
include_linux_agents = []
include_macos_agents = []

[dependencies]
axum = { version = "0.8.3", features = ["macros", "ws"] }
axum-extra = { version = "0.12", features = ["cookie", "cookie-signed"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
base64.workspace = true
chrono = { version = "0.4", features = ["serde"] }
clap = { workspace = true, features = ["env"] }
cookie = "0.18"
eyre.workspace = true
futures.workspace = true
hex.workspace = true
hmac.workspace = true
hyper = "1.8.x"
notify = "8.0.0"
openidconnect = { version = "4.x", default-features = false, features = [
    "reqwest",
    "rustls-tls",
] }
rand.workspace = true
rcgen = "0.14.x"
regex.workspace = true
reqwest = { workspace = true, features = ["rustls-tls", "http2", "charset"] }
rustls = "0.23.x"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_plain = "1.0.2"
sha2.workspace = true
shuthost_common.workspace = true
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros", "migrate", "chrono"] }
tokio.workspace = true
toml = "0.9.x"
tower = "0.5"
tower-http = { version = "0.6", features = [
    "request-id",
    "sensitive-headers",
    "timeout",
    "trace",
    "util",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.x", features = ["env-filter"] }
tungstenite = "*"

[lints]
workspace = true

[build-dependencies]
# Generate PNG favicons from SVG at build time (no external browser)
resvg = "0.45.1"
tiny-skia = "0.11"
eyre.workspace = true
sha2.workspace = true
regex.workspace = true
base64.workspace = true
hex.workspace = true
