[package]
name = "shuthost_coordinator"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

# If you add features, add them as features to the test in CI and Justfile.
# We can't use --all-features in there, as that requires all agents to have been built.
[features]
default = ["compression-br", "compression-zstd", "vendored-openssl"]
compression-br = ["tower-http/compression-br", "reqwest/brotli"]
compression-deflate = ["tower-http/compression-deflate", "reqwest/deflate"]
compression-gzip = ["tower-http/compression-gzip", "reqwest/gzip"]
compression-zstd = ["tower-http/compression-zstd", "reqwest/zstd"]
include_linux_agents = ["include_linux_x86_64_agent", "include_linux_aarch64_agent", "include_linux_musl_x86_64_agent", "include_linux_musl_aarch64_agent"]
include_macos_agents = ["include_macos_aarch64_agent", "include_macos_x86_64_agent"]
include_linux_aarch64_agent = []
include_linux_x86_64_agent = []
include_linux_musl_aarch64_agent = []
include_linux_musl_x86_64_agent = []
include_macos_aarch64_agent = []
include_macos_x86_64_agent = []
vendored-openssl = ["rustls-openssl/vendored"]

[dependencies]
axum = { version = "0.8.3", features = ["macros", "ws"] }
axum-extra = { version = "0.12", features = ["cookie", "cookie-signed"] }
axum-server = { version = "0.7", features = ["tls-rustls-no-provider"] }
base64.workspace = true
chrono = { version = "0.4", features = ["serde"] }
clap = { workspace = true, features = ["env"] }
cookie = "0.18"
eyre.workspace = true
futures.workspace = true
hex.workspace = true
hmac.workspace = true
hyper = "1.x"
nix.workspace = true
notify = "8.0.0"
openidconnect = { version = "4.x", default-features = false, features = [
    "reqwest",
    # We cant configure this to use rustls-openssl, thus we disable the featuee and hope that this works out
    # "rustls-tls",
] }
rand.workspace = true
rcgen = "0.14.x"
regex.workspace = true
reqwest = { workspace = true, features = ["rustls-tls-webpki-roots-no-provider", "http2", "charset"] }
rustls = { version = "0.23.x", default-features = false, features = ["logging", "prefer-post-quantum", "std", "tls12"] }
rustls-openssl = "0.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_plain = "1.0.2"
sha2.workspace = true
shuthost_common.workspace = true
sqlx = { version = "0.8", features = [
    "chrono",
    "macros",
    "migrate",
    "runtime-tokio",
    "sqlite",
] }
tokio.workspace = true
toml = "0.9.x"
tower = "0.5"
tower-http = { version = "0.6", features = [
    "request-id",
    "sensitive-headers",
    "timeout",
    "trace",
    "util",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.x", features = ["env-filter"] }
tungstenite = "*"
web-push = "0.11.0"

[lints]
workspace = true

[build-dependencies]
# Generate PNG favicons from SVG at build time (no external browser)
base64.workspace = true
eyre.workspace = true
hex.workspace = true
regex.workspace = true
resvg = "0.45.1"
sha2.workspace = true
tiny-skia = "0.11"
