[package]
name = "shuthost_host_agent"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# TODO: This is used to serialize the binary into the self-extracting scripts. 
# Consider using the same commands that the shell script uses to deserialize instead, that would drop this dependency.
base64.workspace = true
clap.workspace = true
rand.workspace = true
secrecy.workspace = true
miniserde.workspace = true
shuthost_common = { workspace = true, features = ["agent"] }

[lints]
workspace = true
