[package]
name = "shuthost_host_agent"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
base64.workspace = true
clap.workspace = true
git-version.workspace = true
miniserde.workspace = true
rand.workspace = true
secrecy.workspace = true
shuthost_common = { workspace = true, features = ["agent"] }

[lints]
workspace = true
