[package]
name = "shuthost_node_agent"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
documentation.workspace = true

[dependencies]
clap.workspace = true
hex.workspace = true
hmac.workspace = true
rand.workspace = true
sha2.workspace = true
global_service_install.workspace = true
