[package]
name = "shuthost_node_agent"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
documentation.workspace = true

[dependencies]
shuthost_common.workspace = true
clap.workspace = true
hex.workspace = true
hmac.workspace = true
rand.workspace = true
sha2.workspace = true
